# real_video

./: README.md  readme.txt
build_client/: CMakeCache.txt  Client  Makefile  cmake_install.cmake
build_client/exPackage/: Makefile  cmake_install.cmake
build_getSample/: CMakeCache.txt  GetSamples  Makefile  cmake_install.cmake
build_getSample/exPackage/: Makefile  cmake_install.cmake
build_server/: readme.txt
client/: CMakeLists.txt  client.cpp  client.cpp.bak
client/exPackage/: CMakeLists.txt  fun1.h
get_samples/: CMakeLists.txt  getSamples.cpp  getSamples.cpp.bak
get_samples/exPackage/: fun1.cpp  fun2.cpp  fun2.h
server/: CMakeLists.txt  server.cpp  server.cpp.bak  server.cpp.bak.bak
